--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <guava.version>20.0</guava.version>
     <poi.version>3.17</poi.version>
     <ch.qos.logback.version>1.2.3</ch.qos.logback.version>
+    <lgooddatepicker.version>10.3.1</lgooddatepicker.version>
     <junit.version>4.12</junit.version>
   </properties>
 
@@ -50,6 +51,11 @@
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
       <version>${ch.qos.logback.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.github.lgooddatepicker</groupId>
+      <artifactId>LGoodDatePicker</artifactId>
+      <version>${lgooddatepicker.version}</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
